add:get posts by id
