# usecase/model/post.go
@@ -11,15 +11,19 @@ type Post struct {
 	ID          uuid.UUID `json:"id"`
 	Description string    `json:"description"`
 	CreatedAt   time.Time `json:"created_at"`
-	UserID      uuid.UUID `json:"user_id"`
+
+	User     Users `json:"user"`
+	LikedNum int64 `json:"liked_num"`
 }
 
-func PostFromDomainModel(m *model.Posts)*Post{
+func PostFromDomainModel(m *model.Posts, ln int64) *Post {
+	u := UserFromDomainModel(&m.User)
 	p := &Post{
-		ID : m.ID,
+		ID:          m.ID,
 		Description: m.Description,
-		CreatedAt: m.CreatedAt,
-		UserID: m.UserID,
+		CreatedAt:   m.CreatedAt,
+		User:        *u,
+		LikedNum:    ln,
 	}
 	return p
 }
