# usecase/post_usecase.go
@@ -1,10 +1,20 @@
 package usecase
 
-import "thresher/domain/service"
+import (
+	"net/http"
+	"thresher/domain/service"
+	"thresher/usecase/model"
+	"thresher/utils/cast"
+	"thresher/utils/errors"
 
-type IPostUsecase interface{}
+	"github.com/gin-gonic/gin"
+)
 
-type postUsecase struct{
+type IPostUsecase interface {
+	GetPostById(ctx *gin.Context, id string) (*model.Post, error)
+}
+
+type postUsecase struct {
 	svc service.IPostService
 }
 
@@ -12,4 +22,16 @@ func NewPostUsecase(ps service.IPostService) IPostUsecase {
 	return &postUsecase{
 		svc: ps,
 	}
+}
+
+func (pu *postUsecase) GetPostById(ctx *gin.Context, id string) (*model.Post, error) {
+	uuid, err := cast.CastStringToUUID(id)
+	if err != nil {
+		return nil, errors.New(http.StatusBadRequest, "id cannot be casted correctly", "/usecase/post_usecase")
+	}
+	p, likedNum, err := pu.svc.GetPostById(ctx, *uuid)
+	if err != nil {
+		return nil, err
+	}
+	return model.PostFromDomainModel(p, *likedNum), nil
 }
